// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<p
  className="message"
  dangerouslySetInnerHTML={
    Object {
      "__html": Object {
        "messageText": "What's up?",
      },
    }
  }
/>
`;

exports[`renders correctly with emoji 1`] = `
<p
  className="message"
  dangerouslySetInnerHTML={
    Object {
      "__html": Object {
        "messageText": "&#sad#&",
      },
    }
  }
/>
`;
